--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.0.0 
   modal_progress_hud_nsn: ^0.5.1
+  intl: ^0.18.0
   # The following adds the Cupertino Icons font to your application.
   
   cupertino_icons: ^1.0.8
